@@ -15,7 +15,7 @@ public class ListHelper {
 	public static <T> T getRandomFromList(List<T> list, Random rand) {
 		final int size = list.size();
 		Preconditions.checkArgument(size > 0, "Can't select from empty list");
-		if (size == 1) return list.get(0);
+		if (size == 1) return list.getFirst();
 		int randomIndex = rand.nextInt(list.size());
 		return list.get(randomIndex);
 	}
